--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
+@charset "UTF-8";
 
+
+
+
+h1 {
+  font-family: "Lucida Bright";
+  font-size: 30pt;
+  
+}
+p {
+   font-family: Helvetica, Arial;
+   font-sizeL 15pt;
+}
+  
