--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,6 @@ p {
   background: url("https://raw.githubusercontent.com/starbucks-coding/MAIN/master/Screenshot%202019-12-16%20at%202.08.41%20PM.png");
   background-attachment: fixed;
   background-position: right;
-  background-repeat: none;
+  background-repeat: no-repeat;
 }
   
