--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,7 @@ p {
    font-family: Helvetica, Arial;
    font-sizeL 15pt;
 }
-.parralax {
-  background: url("https://raw.githubusercontent.com/starbucks-coding/MAIN/master/Screenshot%202019-12-16%20at%202.08.41%20PM.png");
-  background-attachment: fixed;
-  background-position: right;
-  background-repeat: no-repeat;
-}
+
+
+/*after here right the code */
   
